--- a/README
+++ b/README
@@ -7,6 +7,8 @@ environment
 
 
 command guide
+CHECKBOX:
+    CHECKBOX <checkbox name> <channel> <test plan> [classic]
 
 PERIODIC:
     hour example:
