Improve checkbox function fleibility
impact:
    README
    auto-sanity.py
    tplan

description:
    support different network interface and setting IP

test:
    N/A

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ environment
 
 command guide
 CHECKBOX:
-    CHECKBOX <checkbox name> <channel> <test plan> [classic]
+    CHECKBOX <network interface> <network address> <checkbox name> <channel> <test plan> [classic]
 
 PERIODIC:
     hour example:
