move configuration from python to configuration file (tplan)
impact:
    auto-sanity.py
    tplan
    README

description:
    move configuration from python to configuration file (tplan)
    the configuration like project name, target device's user name and password,
    console setting

test:
    N/A

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -6,6 +6,13 @@ environment
 
 
 command guide
+CFG:
+    This command must be in the first line and must be in your plan
+    This is for config your project name and your target device's user name and password 
+    also your console
+    example:
+    CFG firecpu2.0 iotuc iotuc /dev/ttyUSB0 115200
+
 CHECKBOX:
     CHECKBOX <network interface> <network address> <checkbox name> <channel> <test plan> [classic]
 
