remove unnecessary file and rename plan
impact:
    renamed:    tplan -> fire-plan
    deleted:    test-runner-imx8gnp2wire

description:
    remove unnecessary file and rename tplan to fire-plan

test:
    run test success

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ program your test
 
 command guide
 CFG:
-    This command must be in the first line and must be in your plan
+    This command must be in the first line and must be in your fire-plan
     This is for config your project name and your target device's user name and password 
     also your console
     example:
