--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 setup environment
 1. ubuntu os
 2. apt get install python3 python3-pip git sshpass usbrelay uuu
-3. pip3 install pyserail schedule
+3. pip3 install pyserail schedule wrapt_timeout_decorator
 4. snap install snapcraft --channel 6.x/stable
 
 program your test
