Add get DHCP result for download checkbox report
impact:
    README
    auto-sanity.py
    example-fire-plan

description:
    We are not set static IP anymore, just get DHCP result after checkbox finished
    and download report.

test:
    on firecpu get DHCP and download report success

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -30,7 +30,7 @@ CHECKBOX:
     you need to get the checkbox test plan first, please refer to QA team or file test-runner-imx8fire
 
     command format:
-        CHECKBOX <network interface> <network address> <checkbox name> <channel> <test plan> [classic]
+        CHECKBOX <network interface> <checkbox name> <channel> <test plan> [classic]
 
 INIT_LOGIN:
     This is use for first time system up after deploy
