Implement provision method: seed_override
impact:
    README
    auto-sanity.py
    example-fire-plan

description:
    seed_override method step:
        1. you should copy out the files in image and put to seed folder
        2. auto-sanity.py will upload seed folder to target device
        3. hold the refresh
        4. remove files under /run/mnt/ubuntu_seed/
        5. copy files under seed to /run/mnt/ubuntu_seed
        6. do snap reboot --install

test:
    1. provision successfully

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -14,12 +14,15 @@ program your test
 
 command guide
 CFG:
-    This command must be in the first line and must be in your fire-plan
+    This command must be in the first line and must be in your flow-plan
     This is for config your project name and your target device's user name and password 
     also your console
 
+    command format:
+        CFG <project name> <user name for target device> <password for target device> <console device> <baud rate> <target device network interface>
+
     example:
-        CFG firecpu2.0 iotuc iotuc /dev/ttyUSB0 115200
+        CFG firecpu2.0 iotuc iotuc /dev/ttyUSB0 115200 eth0
 
 DEPLOY:
     for deploy target device
