Add update mail recipients by parameter
impact:
    README
    auto-sanity.py

description:
    can asign recipient by parameter in CFG

test:
    N/A

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ CFG:
     also your console
 
     command format:
-        CFG <project name> <user name for target device> <password for target device> <console device> <baud rate> <target device network interface>
+        CFG <project name> <user name for target device> <password for target device> <console device> <baud rate> <target device network interface> [mail recepients]
 
     example:
         CFG firecpu2.0 iotuc iotuc /dev/ttyUSB0 115200 eth0
