Add system-user and console-conf case for login
impact:
    auto-sanity.py
    README

description:
    Add system-user and console-conf state, but not implement yet.
    The parameter parsing is ugly, need to improve

test:
    Run deploy ok

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ DEPLOY:
     for deploy target device
 
     command format:
-        DEPLOY <method> [timeout (default 600 seconds)]
+        DEPLOY <method [uuu/seed_override]> <user init method [cloud-init/console-conf/system-user]> [timeout (default 600 seconds)]
     example:
         DEPLOY uuu
 
