--- a/README
+++ b/README
@@ -1,89 +1,40 @@
-setup environment
-1. ubuntu os
-2. sudo apt-get install python3 python3-pip git sshpass usbrelay uuu
-3. pip3 install pyserial schedule wrapt_timeout_decorator
-4. snap install checkbox22 (for zapper to enable upload report to C3)
-5. snap install checkbox --channel=22.04 --classic (for zapper to enable upload report to C3)
-4. snap install snapcraft --channel 6.x/stable (option, if you want to build image)
+Install the auto-sanity tool
+    1. pip3 install -U pip
+    2. pip3 install .
 
-
-program your test
-1. please program your plan using commands below(or refer to tplan file):
-2. After you finished your plan, you can run auto-sanity by command "python3 auto-sanity.py <your plan's name>"
-
-
-command guide
-CFG:
-    This command must be in the first line and must be in your flow-plan
-    This is for config your project name and your target device's user name and password 
-    also your console
-
-    command format:
-        CFG <project name> <user name for target device> <password for target device> <console device> <baud rate> <target device network interface> [mail recepients]
-
+Program your own tplan yaml
     example:
-        CFG firecpu2.0 iotuc iotuc /dev/ttyUSB0 115200 eth0
-
-DEPLOY:
-    for deploy target device
-
-    command format:
-        DEPLOY <method [uuu/seed_override]> <user init method [cloud-init/console-conf/system-user]> [timeout (default 600 seconds)]
-    example:
-        DEPLOY uuu
-
-CHECKBOX:
-    you need to get the checkbox test plan first, please refer to QA team or file test-runner-imx8fire
-
-    command format:
-        CHECKBOX <checkbox name> <test plan> <secure ID> ["Description on C3"]
-
-INIT_LOGIN:
-    This is use for first time system up after deploy
-
-    command format:
-        INIT_LOGIN [timeout (default 600 seconds)]
-
-RUN_LOGIN
-    This is for run mode login, make sure you run this command before power up due to it will check mode.
-
-LOGIN
-    This is a command only for login and check login state, please use this command carefuly, should use it only when device is up already and waiting for login. 
-
-EOFS:
-    target device system command, you can put your command between EOFS: and EOFEND:
-
-    example:
-        EOFS:
-        ls -l
-        cd /
-        ps -A
-        EOFEND:
-
-EOFEND:
-    Please see the instruction EOFS
-
-SYSS:
-    target device system command, you can put your command between EOFS: and EOFEND:
-
-    example:
-        SYSS:
-        ls -l
-        cd /
-        ps -A
-        SYSEND:
-
-SYSEND:
-    Please see the instruction SYSS
-
-PERIODIC:
-    This command must be in the last line in your plan
-
-    hour example:
-        PERIODIC hour
-    daily example:
-        PERIODIC day ["tt:mm"]
-    weakly example:
-        PERIODIC week day(mon/tue/wed/thu/fri/sat/sun) ["tt:mm"]
-
-
+    
+    ##############################
+        config:
+            project_name: x8high-pdkv2
+            username: target device user account
+            password: target device user password
+            serial_console:
+                port: /dev/ttyUSBxxx
+                baud_rate: baud rate, support[115200, 9600]
+            network: target device interface
+            extra-recepients: ["yourmail@mail.com"]
+        
+        run_stage:
+            - sys_commands:
+                - first command to control PC
+                - second command to control PC
+    
+            - deploy:
+                utility: deploy method, we currently support [uuu, seed_override, seed_override_lk]
+                method: create account method, we currently support [cloud-init, system-user]
+            - eof_commands:
+                - first command to target device
+                - second command to target device
+    
+            - checkbox:
+                snap_name: checkbox name
+                launcher: launcher file name 
+                secure_id: device secure id on C3
+                submission_description: "describe your test purpose"
+    
+    ###############################
+    
+Run test
+    auto-sanity --sanity-launcher <your tplan>
