Support provision tool(genio-flash) for MediaTek devices
* Add baudrate 921600 for MediaTek devices
* Disable Pylint R0913 to allow more args in the function. By
  default Pylint only allows 5 argument in the function
* Add a new key(extra_provision_tool_args) for user to specify
  additional arguments consumed by provision tool. For example
  we can use something like "-e list_dtbo=aaaa.dtbo bbbb.dtbo"
  with MediaTek devices to make it load different dtbo when
  doing test.

Signed-off-by: Aristo Chen <aristo.chen@canonical.com>

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Program your own tplan yaml
             password: target device user password
             serial_console:
                 port: /dev/ttyUSBxxx
-                baud_rate: baud rate, support[115200, 9600]
+                baud_rate: baud rate, support[115200, 9600, 921600]
             network: target device interface
             extra-recepients: ["yourmail@mail.com"]
         
